# ARCHive-Network

./: .gitignore  .ignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  pyproject.toml  run.bat  run.ps1  run.sh
docs/: PLAN.md  Pipeline.md
docs/superpowers/plans/: 2026-06-28-streamlinify-curation-tool.md  2026-06-30-svelte-frontend.md  (+4 more)
frontend/: package-lock.json  package.json  vite.config.js  vitest-setup.js  vitest.config.js
frontend/src/: app.css  app.html
scripts/: auto_curate.py  check_aspect_ratios.py
src/archivenetwork/: __main__.py  app.py  config.py  fsops.py  main.py  reveal.py
src/streamlinify/: __main__.py  app.py  config.py  main.py  reveal.py
tests/: conftest.py  test_archive_state.py  test_config.py  test_config_s3.py  test_conftest_safety.py  test_fixture.py  test_naming.py  test_reveal.py
tests/ingest/: test_browse.py  test_unzip.py  test_validate.py
tests/inventory/: test_archive.py  test_grouping.py  test_hashtags.py  test_models.py  test_parser.py  test_text.py  test_video_parser.py
tests/loader/: test_database_admin.py  test_db.py  test_load.py  test_read.py  test_storage.py  test_storage_s3.py  test_upload.py  test_validate_report.py
tests/selection/: test_autocurate.py  test_policy.py  test_state.py
tests/thumbnails/: test_service.py  test_video_store.py
tests/transform/: test_builder.py  test_ready_index.py  test_video_build.py
tests/web/: test_app.py  test_browse_route.py  test_build_route.py  test_caption_routes.py  test_dev_panel_columns.py  test_dev_routes.py  test_gallery_routes.py  test_ingest_routes.py  test_ready_routes.py  test_registry.py  test_routes_workspaces.py  test_s3_routes.py  test_serializers.py  test_stats_routes.py  test_video_routes.py
(+123 files in other folders)
