[project]
name = "archivenetwork"
version = "0.1.0"
description = "Local FastAPI tool to curate Facebook exports"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4",
    "pillow>=10.4",
]

[project.scripts]
archivenetwork = "archivenetwork.main:run"

# Dev/test extras for plain-pip users: `pip install -e ".[dev]"`.
[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6"]

# The same set as a PEP 735 dependency group so `uv sync` installs it by default.
[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archivenetwork"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
